--- a/css/style.css
+++ b/css/style.css
@@ -191,13 +191,14 @@ a {
 
 .footer {
 	display: flex;
-	justify-content: flex-end;
+	justify-content: space-between;
 	padding: 10px;
 	height: 40px;
 	line-height: 20px;
+	font-size: 20px;
 	background-color: #445;
 }
 
-.footer__text {
-	font-size: 20px;
+.footer__feedback__link {
+	text-decoration: none;
 }
